--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,5 +35,11 @@
         android:layout_height="wrap_content"
         android:text="@string/texto_button_buscar"/>
 
+    <Button
+        android:id="@+id/buttonPasarParametro"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/texto_button_pasarparametro"/>
+
 
 </LinearLayout>
