--- a/app/src/main/res/layout/activity_guardar.xml
+++ b/app/src/main/res/layout/activity_guardar.xml
@@ -22,10 +22,10 @@
         android:id="@+id/textView_nombres"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="280dp"
+        android:layout_marginTop="200dp"
         android:text="@string/texto_textview_nombres"
         app:layout_constraintEnd_toStartOf="@+id/editText_ingnombres"
-        app:layout_constraintHorizontal_bias="0.605"
+        app:layout_constraintHorizontal_bias="0.592"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -33,10 +33,10 @@
         android:id="@+id/textView_apellidos"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="132dp"
+        android:layout_marginTop="136dp"
         android:text="@string/texto_textview_apellidos"
         app:layout_constraintEnd_toStartOf="@+id/editText_ingapellidos"
-        app:layout_constraintHorizontal_bias="0.597"
+        app:layout_constraintHorizontal_bias="0.592"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView_nombres" />
 
@@ -47,7 +47,7 @@
         android:layout_marginEnd="60dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="@string/texto_edit_ingresarnombres"
+        android:hint="@string/texto_edit_ingresarnombres"
         app:layout_constraintBottom_toTopOf="@+id/editText_ingapellidos"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView_ingdatos" />
@@ -59,13 +59,13 @@
         android:layout_marginEnd="60dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="@string/texto_edit_ingresarapellidos"
-        app:layout_constraintBottom_toTopOf="@+id/button"
+        android:hint="@string/texto_edit_ingresarapellidos"
+        app:layout_constraintBottom_toTopOf="@+id/button_enviar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editText_ingnombres" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/button_enviar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/texto_button_enviar"
